Add delete to categories
