# routes/categories.js
@@ -1,9 +1,17 @@
 const routes = require('express').Router();
-const { getAllCategories, getCategoryById, createCategory, updateCategory } = require('../controllers/categories');
+const {
+  getAllCategories,
+  getCategoryById,
+  createCategory,
+  updateCategory,
+  deleteCategory
+} = require('../controllers/categories');
 
-routes.get('/', getAllCategories)
+routes
+  .get('/', getAllCategories)
   .get('/:id', getCategoryById)
   .post('/', createCategory)
-  .put('/:id', updateCategory);
+  .put('/:id', updateCategory)
+  .delete('/:id', deleteCategory);
 
 module.exports = routes;
